--- a/app/sass/partials/_tools.sass
+++ b/app/sass/partials/_tools.sass
@@ -1,24 +1,58 @@
 @import "../lib/_variables.sass"
 @import "../lib/_mixins.sass"
 
-//media queries
-.tool
-    -webkit-box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.18)
-    -moz-box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.18)
-    box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.18)
-    border-radius: 12px
-    border: solid 1px $ca-blue-200
-    transition: 200ms ease-in-out
-    &:hover
-        -webkit-box-shadow: 0px 20px 23px 0px rgba(0,0,0,0.18)
-        -moz-box-shadow: 0px 20px 23px 0px rgba(0,0,0,0.18)
-        box-shadow: 0px 20px 23px 0px rgba(0,0,0,0.18)
-        transform: translateY(-3%)
-        transition: 200ms ease-in-out
-        
-    // background: $ca-blue-100
+//mixins exclusivo de tools
+@mixin container-button-column
+    .tool_button_container
+        margin-top: 0.3rem
+        display: flex
+        flex-direction: column-reverse
+        gap: 0.3rem
+        .tool_github
+            justify-content: left
+            padding-left:0rem
+            margin-bottom: 1rem
+            &:hover
+                @apply text-ca_blue-600
+                background-color: white
+
+@mixin container-button-inline
+    .tool_button_container
+        margin-top: 1rem
+        display: flex
+        flex-direction: row
+        gap: 0.3rem
+        .tool_button
+            svg
+                display: flex
+        .tool_github
+            justify-content: left
+            padding-left: 1rem
+            margin-bottom: 0rem
+            align-items: center
+            &:hover
+                @apply text-gray-800
+                background-color: $ca-blue-100
+
+@mixin container-button-inline-no-icon
+    .tool_button_container
+        margin-top: 1rem
+        display: flex
+        flex-direction: row
+        gap: 0.3rem
+        .tool_button
+            svg
+                display: none
+        .tool_github
+            justify-content: left
+            padding-left: 1rem
+            margin-bottom: 0rem
+            &:hover
+                @apply text-gray-800
+                background-color: $ca-blue-100
+
+@mixin img-tool
     .tool_logo
-        background-color: $blue_primary
         width: 100%
         //margin: 0.8rem 0 0 0
         border-radius: 11px 11px 0 0
@@ -27,40 +61,152 @@
         align-items: center
         img
             border-radius: 11px 11px 0 0
-            filter: brightness(0) invert(1)
-            -webkit-filter: brightness(0) invert(1)
             object-fit: contain
             align-self: center
             min-height: 135px
             max-height: 160px
             max-width: 100%
             padding: 3rem
-    .tool_content
-        @apply text-gray-800
-        padding: 1rem 1.8rem 1.8rem 1.8rem
-        display: flex
-        flex-direction: column
+        
 
-        .tool_title
-            h2
-                line-height: 115%
-        .tool_button_container
-            display: flex
-            justify-content: space-between
-            margin-top: 1rem
-            .tool_button
-                @apply text-ca_blue-700 /*apply siempre al inicio del sass, sino da error (lo hemos vivido)*/
+@media (min-width:150px)
+    .tools
+        .tool
+            -webkit-box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.18)
+            -moz-box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.18)
+            box-shadow: 0px 10px 13px -7px rgba(0,0,0,0.18)
+            border-radius: 12px
+            border: solid 1px $ca-blue-200
+            transition: 200ms ease-in-out
+            @apply bg-slate-100
+            //este hover no tiene sentido, es demasiado distinto que el resto de hovers de otras partes de la web
+            // &:hover
+            //     -webkit-box-shadow: 0px 20px 23px 0px rgba(0,0,0,0.18)
+            //     -moz-box-shadow: 0px 20px 23px 0px rgba(0,0,0,0.18)
+            //     box-shadow: 0px 20px 23px 0px rgba(0,0,0,0.18)
+            //     transform: translateY(-3%)
+            //     transition: 200ms ease-in-out
+                
+            // background: $ca-blue-100
+            @include img-tool
+            .tool_logo
+                //background-color: $blue_primary                
+                img
+                    // filter: brightness(0) invert(1)
+                    // -webkit-filter: brightness(0) invert(1)
+                    
+            .tool_content
+                @apply text-gray-800
+                padding: 1rem 1.8rem 1.8rem 1.8rem
                 display: flex
-                flex-wrap: wrap
-                align-items: center
-                @include big-border-button-blue
-                
-                a
+                flex-direction: column
+                .tool_title
+                    h2
+                        line-height: 115%
+                        font-weight: 700
+                        margin-bottom: 0.6rem
+                .tool_button_container
                     display: flex
-                svg
-                    margin-right: 0.6rem
-            .tool_github
-                @apply text-gray-600
-                @include invisible-button
-                text-decoration: underline
+                    justify-content: space-between
+                    margin-top: 1rem
+                    .tool_button
+                        @apply text-ca_blue-700 /*apply siempre al inicio del sass, sino da error (lo hemos vivido)*/
+                        display: flex
+                        flex-wrap: wrap
+                        align-items: center
+                        @include button-load-more
+                        
+                        
+                        a
+                            display: flex
+                        svg
+                            margin-right: 0.6rem
+                    .tool_github
+                        @apply text-gray-600
+                        @include invisible-button
+                        text-decoration: underline
+                        display: flex
+                        
+@media (max-width: 370px )
+    .tools
+        .tool
+            .tool_content
+                @include container-button-inline-no-icon
                 
+@media (min-width: 500px)
+    .tools
+        .tool
+            .tool_content
+                .tool_button_container
+                    display: flex
+                    flex-direction: row
+                    .tool_button
+                        justify-content: center
+                        margin: 0
+                    .tool_github
+                        justify-content: center
+                        svg
+                            display: flex
+@media (min-width: 600px)
+    .tools
+        .tool
+            .tool_description
+                p
+                    margin-bottom:0rem
+            .tool_content
+                @include container-button-column
+                
+                
+@media (min-width: 730px)
+    .tools
+        .tool
+            .tool_content
+                @include container-button-inline
+                
+                   
+@media (min-width: 900px)
+    .tools
+        .tool
+            .tool_content
+                @include container-button-column
+                
+@media (min-width: 1150px)
+    .tools
+        .tool
+            .tool_content
+                @include container-button-inline-no-icon
+                        
+@media (min-width: 1220px)
+    .tools
+        .tool
+            .tool_content
+                @include container-button-inline
+
+
+.bg-blue-gradient-plain
+    background: linear-gradient(139deg, rgba(83,64,255,0.5) 0%, rgba(111,199,255,0.5) 100%)
+    background-position: center
+
+    img
+        filter: brightness(0) invert(0.4)
+        -webkit-filter: brightness(0) invert(0.4)
+        mix-blend-mode: multiply
+
+.bg-purple-gradient-plain
+    background: linear-gradient(320deg, rgba(83,64,255,0.5) 0%, rgba(196,141,116,0.5) 100%)
+    background-position: center
+
+    img
+        filter: brightness(0) invert(0.4)
+        -webkit-filter: brightness(0) invert(0.4)
+        mix-blend-mode: multiply
+
+.bg-yellow-gradient-plain
+    background: linear-gradient(225deg,  rgba(255,127,0,0.65)0%, rgba(192,112,168,0.65) 100%)
+    background-position: center 
+
+    img
+        filter: brightness(0) invert(0.4)
+        -webkit-filter: brightness(0) invert(0.4)
+        mix-blend-mode: multiply
+        
