--- a/app/sass/partials/_headermenu.sass
+++ b/app/sass/partials/_headermenu.sass
@@ -5,7 +5,12 @@
     .lang_switcher 
         @apply text-gray-600
         margin-left: 1.6rem
+        display: flex
+        flex-direction: column
+        align-items: flex-end
         cursor: pointer
+        div
+            margin: 3rem 0 0.6rem 0 
         svg
             margin: 0.24rem 0.4rem 0 0
 @media (min-width: 600px) 
@@ -13,6 +18,9 @@
         position: absolute
         right: 2rem
         top: 1.9rem
+        div
+            margin: 0rem 
+
 
 @media (min-width: 900px)
     .lang_switcher
