--- a/app/sass/lib/_type.sass
+++ b/app/sass/lib/_type.sass
@@ -1,122 +1,174 @@
+// Estilos de tipografía
+// Hay tres estilos
+// 1) para móvil (300-650px), 
+// 2) para ipad/ desktop (650px-1400px),
+// 3) para pantallas desktop con alta resolución (1400px-2000px)
 
-$body-text: 14px, 400, 140%, 1rem, 0.6rem
-$sm-text: 16px, 600, 140%, 1rem, 0.6rem //h5
-$md-text: 20px, bold, 140%, 1rem //h4
-$lg-text: 24px, bold,140%, 1rem  //h3
-$xl-text: 28px, bold, 140%, 1rem //h2
-$xxl-text: 32px, bold, 140%, 1rem  //h1
-$button: 16px, semibold //buttons
+// DESCRIPCION DE ATRIBUTOS DE VARIABLES DE TEXTO
+// 1er atributo: tamaño móvil, 
+// 2do atributo: tamaño ipad/ desktop
+// 3er atributo: tamaño desktop alta resolución
+// 4to atributo: peso
+// 5to atributo: alto de linea
+// 6to atributo: margen bajo
+
+$xs-text: 13px, 14px, 16px, 400, 140%, 1rem, 0.6rem //small
+$body-text: 14px, 16px, 19px, 400, 140%, 1rem, 0.6rem
+$button: 16px, 14px, 20px, semibold //buttons
+$sm-text: 14px, 16px, 19px, 600, 140%, 1rem, 0.6rem //h5
+$md-text: 18px, 20px, 24px, bold, 140%, 1rem //h4
+$lg-text: 22px, 24px, 28px, bold,140%, 1rem  //h3
+$xl-text: 25px, 28px, 32px, bold, 140%, 1rem //h2
+$xxl-text: 28px, 32px, 38px, bold, 140%, 1rem  //h1
+
 $slim-weight: 500
 $regular:400
 $semibold:600
 $bold:800
 
-//TIPOGRAFÍAS PARA MÓVIL
- @media screen and (max-width: 640px)
-    html, body, footer
-        h1
-            font-family: "Montserrat", sans-serif
-            font-size: nth($lg-text,1)
-            line-height: nth($lg-text,3)
-            margin-bottom: nth($lg-text,4)
 
-        h2
-            font-family: "Montserrat", sans-serif
-            font-size: nth($lg-text,1)
-            line-height: nth($md-text,3)
-            margin-bottom: nth($md-text,4)
 
-        h3
-            font-family: "Montserrat", sans-serif
-            font-size: nth($md-text,1)
-            line-height: nth($md-text,3)
-            margin-bottom: nth($md-text,4)
+h1
+    @media screen and (min-width: 150px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($xxl-text,1)
+        line-height: nth($xxl-text,5)
+        margin-bottom: nth($xxl-text,6)
+    @media screen and (min-width: 640px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($xxl-text,2)
+        line-height: nth($xxl-text,5)
+        margin-bottom: nth($xxl-text,6)
+    @media screen and (min-width: 1400px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($xxl-text,3)
+        line-height: nth($xxl-text,5)
+        margin-bottom: nth($xxl-text,6)
 
-        h4
-            font-family: "Montserrat", sans-serif
-            font-size: nth($md-text,1)
-            line-height: nth($sm-text,3)
-            margin-bottom: nth($sm-text,4)
 
-        h5
-            font-family: "Montserrat", sans-serif
-            font-size: nth($sm-text,1)
-            line-height: nth($sm-text,3)
-            margin-bottom: nth($sm-text,4)
+h2
+    @media screen and (min-width: 150px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($xl-text,1)
+        line-height: nth($xl-text,5)
+        margin-bottom: nth($xl-text,6)
+    @media screen and (min-width: 640px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($xl-text,2)
+        line-height: nth($xl-text,5)
+        margin-bottom: nth($xl-text,6)
+    @media screen and (min-width: 1400px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($xl-text,3)
+        line-height: nth($xl-text,5)
+        margin-bottom: nth($xl-text,6)
+h3
+    @media screen and (min-width: 150px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($lg-text,1)
+        line-height: nth($lg-text,5)
+        margin-bottom: nth($lg-text,6)
+    @media screen and (min-width: 640px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($lg-text,2)
+        line-height: nth($lg-text,5)
+        margin-bottom: nth($lg-text,6)
+    @media screen and (min-width: 1400px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($lg-text,3)
+        line-height: nth($lg-text,5)
+        margin-bottom: nth($lg-text,6)
+h4
+    @media screen and (min-width: 150px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($md-text,1)
+        line-height: nth($md-text,5)
+        margin-bottom: nth($md-text,6)
+    @media screen and (min-width: 640px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($md-text,2)
+        line-height: nth($md-text,5)
+        margin-bottom: nth($md-text,6)
+    @media screen and (min-width: 1400px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($md-text,3)
+        line-height: nth($md-text,5)
+        margin-bottom: nth($md-text,6)
+h5
+    @media screen and (min-width: 150px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($sm-text,1)
+        line-height: nth($sm-text,5)
+        margin-bottom: nth($sm-text,6)
+    @media screen and (min-width: 640px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($sm-text,2)
+        line-height: nth($sm-text,5)
+        margin-bottom: nth($sm-text,6)
+    @media screen and (min-width: 1400px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($sm-text,3)
+        line-height: nth($sm-text,5)
+        margin-bottom: nth($sm-text,6)
 
-        p
 
-            font-family: "Montserrat", sans-serif
-            font-size: nth($body-text,1)
-            line-height: nth($body-text,3)
-            margin-bottom: nth($body-text,5)
 
-        button
+// parrafos
+p
+    @media screen and (min-width: 150px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($body-text,1)
+        line-height: nth($body-text,5)
+        margin-bottom: nth($body-text,6)
+    @media screen and (min-width: 640px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($body-text,2)
+        line-height: nth($body-text,5)
+        margin-bottom: nth($body-text,6)
+    @media screen and (min-width: 1400px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($body-text,3)
+        line-height: nth($body-text,5)
+        margin-bottom: nth($body-text,6)
+
+// parrafos
+small
+    @media screen and (min-width: 150px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($xs-text,1)
+        line-height: nth($xs-text,5)
+        margin-bottom: nth($xs-text,6)
+    @media screen and (min-width: 640px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($xs-text,2)
+        line-height: nth($xs-text,5)
+        margin-bottom: nth($xs-text,6)
+    @media screen and (min-width: 1400px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($xs-text,3)
+        line-height: nth($xs-text,5)
+        margin-bottom: nth($xs-text,6)
+
+
+// botones + botones con links
+button, a
+    @media screen and (min-width: 150px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($button,1)
+    @media screen and (min-width: 640px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($button, 2)
+    @media screen and (min-width: 1400px)
+        font-family: "Montserrat", sans-serif
+        font-size: nth($button,3)
+    a
+        @media screen and (min-width: 150px)
             font-family: "Montserrat", sans-serif
             font-size: nth($button,1)
-            font-weight: nth($button,2)
-
-        .smallcaps
+        @media screen and (min-width: 640px)
             font-family: "Montserrat", sans-serif
-            font-size: nth($body-text,1)
-            font-weight: $semibold
-            font-variant: small-caps
-
-
-@media screen and (min-width: 641px)
-    html, body, footer
-        h1
+            font-size: nth($button, 2)
+        @media screen and (min-width: 1400px)
             font-family: "Montserrat", sans-serif
-            font-size: nth($xxl-text,1)
-            font-weight: nth($xxl-text,2)
-            line-height: nth($xxl-text,3)
-            margin-bottom: nth($xxl-text,4)
-
-        h2
-            font-family: "Montserrat", sans-serif
-            font-size: nth($xl-text,1)
-            font-weight: nth($xl-text,2)
-            line-height: nth($xl-text,3)
-            margin-bottom: nth($xl-text,4)
-
-        h3
-            font-family: "Montserrat", sans-serif
-            font-size: nth($lg-text,1)
-            font-weight: nth($lg-text,2)
-            line-height: nth($lg-text,3)
-            margin-bottom: nth($lg-text,4)
-
-        h4
-            font-family: "Montserrat", sans-serif
-            font-size: nth($md-text,1)
-            // font-weight: nth($md-text,2)
-            line-height: nth($md-text,3)
-            margin-bottom: nth($md-text,4)
-
-        h5
-            font-family: "Montserrat", sans-serif
-            font-size: nth($sm-text,1)
-            // font-weight: nth($sm-text,2)
-            line-height: nth($sm-text,3)
-            margin-bottom: nth($sm-text,4)
-
-        p
-
-            font-family: "Montserrat", sans-serif
-            font-size: nth($body-text,1)
-            font-weight: nth($body-text,2)
-            line-height: nth($body-text,3)
-            margin-bottom: nth($body-text,4)
-
-        button
-            font-family: "Montserrat", sans-serif
-            font-size: nth($button,1)
-            font-weight: nth($button,2)
-
-        .smallcaps
-            font-family: "Montserrat", sans-serif
-            font-size: nth($body-text,1)
-            font-weight: $semibold
-            font-variant: small-caps
-
-
+            font-size: nth($button,3)
+//weight estaría bien ?
