--- a/app/sass/partials/_projects.sass
+++ b/app/sass/partials/_projects.sass
@@ -11,6 +11,7 @@ $windowWidth: 100vw
         gap: 0.4rem
         flex-wrap: wrap
         .button_filter
+            @include button
             @apply bg-ca_blue-100
             font-weight: 600
             padding: 0.6rem 1rem
@@ -54,7 +55,6 @@ $windowWidth: 100vw
             .project_info
                 @apply text-gray-400
                 .project_title 
-                    font-size: 1.25rem
                     margin-bottom: 1rem
                 .project_subtitle
                     font-weight: 500     
@@ -91,6 +91,8 @@ $windowWidth: 100vw
         justify-content: center
         gap:0
         .button_filter
+            @include button
+
             @apply bg-ca_blue-100
             font-weight: 600
             padding: 1.2rem 2rem
@@ -138,7 +140,6 @@ $windowWidth: 100vw
             .project_info
                 @apply text-gray-400
                 .project_title 
-                    font-size: 1.25rem
                 .project_subtitle
                     font-weight: 500     
                         
