--- a/app/sass/partials/_team.sass
+++ b/app/sass/partials/_team.sass
@@ -1,3 +1,6 @@
+
+    
+//Correcciones: mixin de tags    
 .team
     main
         .teammates
@@ -27,13 +30,12 @@
                         height: 100%
                         margin-top: -0.3rem
                         span
-                            padding:  0.12em 0.65em 0.25em 0.65em
+                            padding:  0.2em 0.65em 0.25em 0.65em 
                             border: 1px solid #333333 // cómo meter variables en team
                             border-radius: 4px
                             font-weight: 600
                     .mate_position
                         p
-                            font-size: 1em
                             margin: 1.6rem 0 0.6rem 0
                         span
                             font-weight: 600
