--- a/app/sass/partials/_tools.sass
+++ b/app/sass/partials/_tools.sass
@@ -1,6 +1,12 @@
 @import "../lib/_variables.sass"
 @import "../lib/_mixins.sass"
 
+// IMPORTANTE CORRECCIONES! Hace falta hacer correcciones de código duplicado
+// tool_github tiene enganchado un mixin que se llama invisible_button para ciertos media 
+// queries. Para otros hace falta crear otro nuevo mixin, algo como "invisible_button_inline", 
+// sino, no se puede cambiar sus propiedades desde el mixin, sino que hay que hacerlo desde 
+// los 3 media queries con ese botón distinto
+
 //mixins exclusivo de tools
 @mixin container-button-column
     .tool_button_container
@@ -15,7 +21,8 @@
             &:hover
                 @apply text-ca_blue-600
                 background-color: white
-
+//corrección aquí (1/3)
+    
 @mixin container-button-inline
     .tool_button_container
         margin-top: 1rem
@@ -32,7 +39,7 @@
             align-items: center
             &:hover
                 @apply text-gray-800
-                background-color: $ca-blue-100
+                background-color: $ca-blue-300
 
 @mixin container-button-inline-no-icon
     .tool_button_container
@@ -49,7 +56,7 @@
             margin-bottom: 0rem
             &:hover
                 @apply text-gray-800
-                background-color: $ca-blue-100
+                background-color: $ca-blue-300
 
 @mixin img-tool
     .tool_logo
@@ -114,7 +121,8 @@
                         display: flex
                         flex-wrap: wrap
                         align-items: center
-                        @include button-load-more
+                        @include big-border-button-blue
+                        
                         
                         
                         a
@@ -122,8 +130,8 @@
                         svg
                             margin-right: 0.6rem
                     .tool_github
-                        @apply text-gray-600
                         @include invisible-button
+                        @apply text-gray-600
                         text-decoration: underline
                         display: flex
                         
