--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -39,7 +39,6 @@
         height: 24px
         padding: 4px 10px 
         border-radius:4px
-        font-size: 1rem
         font-weight: 600
 
 @mixin tag-black-transparent
@@ -47,13 +46,11 @@
         background-color: rgb(0, 0, 0,0.3)
         display: flex
         align-items: center
-        padding: 0.9rem 1rem
+        padding: 0.3rem 0.7rem 
         font-weight: 500
         border-radius: 4px
     @media (min-width: 770px)   
-        margin: 0px
-        padding: 0.3rem 0.7rem 
-        border-radius:4px
+    // responsive hecho
  
 
 //--------------------
@@ -65,6 +62,17 @@
     outline: none
     border: none
     background: none
+
+@mixin icon-button-left
+    svg 
+        align-self: center
+        margin-left: 0.6rem
+
+@mixin icon-button-right
+    svg 
+        align-self: center
+        margin-right: 0.6rem
+
 
 @mixin button-load-more
     @include button
@@ -88,9 +96,12 @@
         margin-bottom: 0
 @mixin big-border-button-blue
     border: 1px solid $ca-blue-700
+    color: $ca-blue-700
     border-radius: 24px
     padding: 0.5rem 1.2rem 0.7rem 1.4rem
     transition: 200ms ease-in-out
+    p 
+        font-weight: 500
     &:hover
         color: white
         transition: 200ms ease-in-out
