--- a/app/sass/partials/_courses.sass
+++ b/app/sass/partials/_courses.sass
@@ -31,13 +31,13 @@ $windowWidth: 100vw
         font-size: 1rem
         .course_tag 
             display: flex
-            small
-                margin-bottom: 0.1rem
-                @include tag-black-transparent
+            margin-bottom: 0.1rem
+            @include tag-black-transparent
                
                 
         .course_route
             @include border-button-white
+            @include icon-button-right
             transition: 200ms ease-in-out
             &:hover
                 background: white
@@ -45,9 +45,7 @@ $windowWidth: 100vw
                 @apply text-blue-950
             a 
                 display: flex
-            svg
-                margin: 0.3rem 0.5rem 0 0
-         
+                align-items: center
 
 
 @media (min-width: 770px)
