--- a/app/globals.css
+++ b/app/globals.css
@@ -1631,7 +1631,7 @@ main {
   margin-top: 100px;
 }
 .about main .about_description {
-  border-bottom: solid 1.5px #cccccc;
+  /* border-bottom: solid 1.5px #cccccc; */
   padding: 9rem 3rem 6rem 7rem;
 }
 .about main .location {
@@ -1673,7 +1673,7 @@ main {
   padding: 1rem 0 0.5rem 0;
 }
 .about main section:last-child {
-  border-bottom: solid 1.5px #cccccc;
+  /* border-bottom: solid 1.5px #cccccc; */
 }
 .about h1 {
   font-size: 4rem;
@@ -1693,7 +1693,7 @@ main {
   font-size: 1.5rem;
 }
 .about .border_nav_bar {
-  border-bottom: solid 1.5px #cccccc;
+  /* border-bottom: solid 1.5px #cccccc; */
   transition: none;
 }
 
