--- a/app/sass/main.css
+++ b/app/sass/main.css
@@ -2030,4 +2030,4 @@ RESPONSIVE
 }
 body :not(.menu) a:hover {
   text-decoration: none;
-}/*# sourceMappingURL=main.css.map */
+}# sourceMappingURL=main.css.map
