--- a/app/sass/partials/_courses.sass
+++ b/app/sass/partials/_courses.sass
@@ -27,14 +27,11 @@ $windowWidth: 100vw
     .card_container_top 
         display: flex
         justify-content: space-between 
-        height: 24px
-        font-size: 1rem
+        //font-size: 1rem
         .course_tag 
             display: flex
             margin-bottom: 0.1rem
-            @include tag-black-transparent
-               
-                
+            @include tag-black-transparent       
         .course_route
             @include border-button-white
             @include icon-button-right
@@ -83,8 +80,8 @@ $windowWidth: 100vw
                 small
                     margin-top:0
                     display: block
-                    font-size: 1.1rem
-                    line-height: 1.4em
+                    //font-size: 1.1rem
+                    
                     font-weight: 400
                     max-height:160px
                     
