--- a/app/sass/partials/_headermenu.sass
+++ b/app/sass/partials/_headermenu.sass
@@ -10,9 +10,12 @@
         align-items: flex-end
         cursor: pointer
         div
+            display: flex
             margin: 3rem 0 0.6rem 0 
+            align-items: center
         svg
-            margin: 0.24rem 0.4rem 0 0
+            margin: 0rem 0.6rem 0 0
+    
 @media (min-width: 600px) 
     .lang_switcher
         position: absolute
